tests/negative/traits/method_not_in_impl.orng
// method_not_in_impl.orng:14:5: error: missing implementation of method `f` from trait `My_Trait`
// impl My_Trait for Int {
//    ^
// method_not_in_impl.orng:9:7: note: method specification here:
//     fn f() -> ()
//      ^
// 
trait My_Trait {
    fn f() -> ()

    fn g() -> ()
}

impl My_Trait for Int {
    fn g() -> () { }
}

fn main() -> Int {
    4
}